--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,16 +6,14 @@ phases:
       nodejs: 14
     commands:
       - echo "Installing dependencies"
-      - npm install -g aws-cli
-
+      - npm install -g
   pre_build:
     commands:
       - echo "Logging in to GitHub"
-      - git config --global credential.helper '!aws codebuild --profile $AWS_DEFAULT_PROFILE login'
       - git clone https://github.com/mo-nadeem/nadeem-web.git
-      - cd yourrepository
+      - cd nadeem-web
       - echo "Checking out the latest code"
-      - git checkout master
+      - git checkout main
 
   build:
     commands:
